--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     class="card-link list-item line-throught"
                     data-toggle="collapse"
                   >
-                    <!--Text Here-->
+                    
                   </a>
 
                   <a
@@ -87,7 +87,7 @@
                     <div class="under-list-item">
                       <ul class="list-group">
                         <li id="innerLi" class="list-group-item">
-                          <span class="m-0 p-0"><!--Text Here--></span>
+                          <span class="m-0 p-0"></span>
                           <a
                             href="#"
                             class="d-none delete-inner-item text-danger float-right fas fa-times mt-1 mx-1"
@@ -124,9 +124,8 @@
     </div>
 
     <footer class="bg-dark text-light text-center p-3">
-      <a href="https://www.github.com/okanuregen" class="text-light"
-        >by Dhanush B</a
-      >
+      <a class="text-light"
+        >CODSOFT IT SOLUTION TASK 1</a>
     </footer>
 
     <script src="script2.js"></script>
